Basic Calendar Tags

--- a/settings.html
+++ b/settings.html
@@ -94,7 +94,7 @@
             <p><a id="btn_signOut" class="btn btn-secondary" href="#" role="button">Sign Out</a></p>
         </div>
         <div class="container">
-            <p class="lead" style="font-size: 0.9rem">See <a href="https://educ.io/extensions/tag-a-doc" target="_blank" rel="noopener">our site</a> for further info.</p>
+            <p class="lead" style="font-size: 0.9rem">See <a href="https://educ.io/extensions/tag-a-doc" target="_blank" rel="noopener">our site</a> for further info<span class="d-none auth"> and use our <a href="https://educ.io/folders" target="_blank" rel="noopener">folders</a> app to <strong>edit</strong> and <strong>manage</strong> your tags</span>.</p>
         </div>
     </div>
 
